# node

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATCH_NOTES.md  PROTOCOL.md  README.md  README_KERNEL_PHASE_1.md  README_PHASE_2.md  README_PHASE_3.md  README_PHASE_4.md  README_PHASE_5_1.md  README_PHASE_5_2.md  SECURITY.md  THREAT_MODEL.md  TIME.md  generate_prometheus_tree.py  pyproject.toml  requirements-lock.txt  requirements.txt  test_cpu_backend_registry.cpp  test_cpu_health_capacity.cpp
assembly/: CMakeLists.txt  README.md
assembly/init/: README.md
assembly/manifests/public/: README.md  example.manifest
assembly/micro_os/: README.md
assembly/profiles/: README.md
assembly/providers/: README.md  external_component_manifest.c  external_component_manifest.h  manifest_validator_main.c
assembly/ram_assembly_p0/: Makefile  README.md
assembly/ram_assembly_p0/config/: common.config  dell_wyse_5070.config  x86_64.config
assembly/ram_assembly_p0/contracts/: README.md  p0-conformance-authority-v1.json
assembly/ram_assembly_p0/manifests/: invalid.manifest  tests.manifest
assembly/ram_assembly_p0/records/: README.md
assembly/ram_assembly_p0/records/examples/: asm-provider-operation.json  candidate-initramfs-output.json  candidate-kernel-output.json  p0-conformance-operation.json
assembly/ram_assembly_p0/scripts/: build-initramfs.sh  build-kernel.sh  compile-payloads.sh  configure-kernel.sh  execute-kexec.sh  fetch-kernel-source.sh  load-kexec.sh  preflight.sh  test-privilege-model.sh  validate-artifacts.sh  validate-provider-records.sh  verify-kernel-config.sh
assembly/ram_assembly_p0/scripts/lib/: p0-common.sh
assembly/ram_assembly_p0/src/: p0_init.c  p0_test_runner.c
assembly/ram_assembly_p0/src/tests/: test_anonymous_memory.c  test_fork_exec_wait.c  test_intentional_failure.c  test_signal_payload.c  test_sys_available.c  test_timeout_payload.c
assembly/ram_assembly_p0/tests/: validate_provider_records.py
assembly/requirements/: README.md  debian-packages.txt  host-tools.txt  kernel-build-tools.txt  toolchain-matrix.md
assembly/tests/: CMakeLists.txt  README.md  test_external_component_manifest.c
assembly/tests/fixtures/: incompatible.manifest  malformed.manifest  missing-required.manifest  too-many-capabilities.manifest  unsupported-class.manifest  valid.manifest
benchmarks/: dense_benchmark.cu  (+4 more)
legacy/: README.md  (+3 more)
src/backends/: CMakeLists.txt  backend_registry.cpp  backend_registry.hpp  compute_backend.hpp
src/backends/accelerator/: CMakeLists.txt  accelerator_backend.hpp  hailo_backend.cpp  hailo_backend.hpp  imx500_backend.cpp
src/backends/arm/: CMakeLists.txt  arm_capabilities.cpp  arm_capabilities.hpp  arm_linux_auxv.cpp  arm_linux_auxv.hpp  arm_processor_identity.cpp  arm_processor_identity.hpp  neon_dispatch.cpp  neon_dispatch.hpp
src/backends/cpu/: CMakeLists.txt  cpu_backend.cpp  cpu_backend.hpp  cpu_capabilities.cpp  cpu_capabilities.hpp  cpu_capacity.cpp  cpu_capacity.hpp  cpu_health.cpp  cpu_health.hpp  cpu_identity.cpp  cpu_identity.hpp  cpu_thread_pool.cpp  cpu_thread_pool.hpp  cpu_topology.cpp  cpu_topology.hpp  simd_dispatch.cpp  simd_dispatch.hpp
src/backends/cuda/: CMakeLists.txt  cuda_backend.cu  cuda_backend.hpp  cuda_capabilities.cu  cuda_capabilities.hpp  cuda_device.cu  cuda_device.hpp  cuda_device_pool.cu  cuda_device_pool.hpp  cuda_device_worker.cpp  cuda_device_worker.hpp  cuda_evidence_adapter.cpp  cuda_evidence_adapter.hpp  cuda_health.cu  cuda_health.hpp  cuda_job_queue.cu  cuda_job_queue.hpp  cuda_kernel_adapter.cpp  cuda_kernel_adapter.hpp  cuda_kernel_registry.cu  cuda_kernel_registry.hpp  cuda_memory_pool.cu  cuda_memory_pool.hpp  cuda_profiles.cpp  cuda_profiles.hpp  cuda_runtime_compilation.cpp  cuda_runtime_compilation.hpp
src/backends/storage/: CMakeLists.txt  storage_backend.cpp  storage_backend.hpp  test_cpu_backend_registry.cpp  test_cuda_backend_registry.cu
src/core/: CMakeLists.txt  adaptive_state.cpp  adaptive_state.hpp  architecture_graph.cpp  architecture_graph.hpp  architecture_shadow.cpp  architecture_shadow.hpp  capability_registry.cpp  capability_registry.hpp  configuration.cpp  configuration.hpp  execution_policy.cpp  execution_policy.hpp  health_monitor.cpp  health_monitor.hpp  node_identity.cpp  node_identity.hpp  node_runtime.cpp  node_runtime.hpp  proposal_abi.cpp  proposal_abi.h  resource_manager.cpp  resource_manager.hpp  service.cpp  service.hpp  service_context.cpp  service_context.hpp  service_manager.cpp  service_manager.hpp  shutdown_manager.cpp  shutdown_manager.hpp  task_scheduler.cpp  task_scheduler.hpp
src/core/acs/: CMakeLists.txt  acs_admission.cpp  acs_admission.hpp  acs_lifecycle.cpp  acs_lifecycle.hpp  acs_registry.cpp  acs_registry.hpp  acs_types.hpp
src/hardware/: CMakeLists.txt  gpu_evidence_correlation.cpp  gpu_evidence_correlation.hpp  linux_pci_inventory.cpp  linux_pci_inventory.hpp
src/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.cuh  dense_kernels.cu  dense_kernels.cuh  learning_kernels.cu  learning_kernels.cuh  normalization_kernels.cu  normalization_kernels.cuh  optimizer_kernels.cu  optimizer_kernels.cuh  reduction_kernels.cu  reduction_kernels.cuh  temporal_kernels.cu  temporal_kernels.cuh
tests/unit/backends/: CMakeLists.txt  test_arm_capabilities.cpp  test_arm_linux_auxv.cpp  test_arm_processor_identity.cpp  test_cpu_foundation.cpp  test_cpu_simd_dispatch.cpp  test_cpu_thread_pool.cpp  test_cuda_device_worker.cpp  test_cuda_evidence_adapter.cpp  test_cuda_runtime_compilation.cpp  test_cuda_runtime_resources.cu  test_hailo_backend.cpp
tests/unit/core/: CMakeLists.txt  acs_test_fixture.hpp  test_acs_admission.cpp  test_acs_concurrency.cpp  test_acs_lifecycle.cpp  test_acs_registry.cpp  test_acs_types.cpp  test_adaptive_state.cpp  test_architecture_graph.cpp  test_architecture_shadow.cpp  test_execution_policy.cpp  test_proposal_abi.cpp  test_service_lifecycle.cpp
tests/unit/hardware/: CMakeLists.txt  test_gpu_evidence_correlation.cpp  test_linux_pci_inventory.cpp
(+451 files in other folders)
